Add models for board, player, game, etc.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@
 # other streaming HTTP responses.
 akka {
   # "akka.log-config-on-start" is extraordinarly useful because it log the complete
-  # configuration at INFO level, including defaults and overrides, so it s worth
+  # configuration at INFO level, including defaults and overrides, so it z worth
   # putting at the very top.
   #
   # Put the following in your conf/logback.xml file:
@@ -38,7 +38,7 @@ akka {
 ## Secret key
 # http://www.playframework.com/documentation/latest/ApplicationSecret
 # ~~~~~
-# The secret key is used to sign Play's session cookie.
+# The secret key is used to sign Play'z session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
 play.crypto.secret = "changeme"
 
@@ -57,25 +57,28 @@ play.modules {
   # in the root package (the "app" directory), or you can define them
   # explicitly below.
   # If there are any built-in modules that you want to disable, you can list them here.
-  #enabled += my.application.Module
 
   # If there are any built-in modules that you want to disable, you can list them here.
-  #disabled += ""
+  enabled += "modules.CustomObjectMapperModule"
+
+  # Disable default Play framework cache plugin
+  disabled += "play.api.cache.EhCacheModule"
+  disabled += "play.core.ObjectMapperModule"
 }
 
 ## IDE
 # https://www.playframework.com/documentation/latest/IDE
 # ~~~~~
 # Depending on your IDE, you can add a hyperlink for errors that will jump you
-# directly to the code location in the IDE in dev mode. The following line makes 
-# use of the IntelliJ IDEA REST interface: 
-#play.editor="http://localhost:63342/api/file/?file=%s&line=%s"
+# directly to the code location in the IDE in dev mode. The following line makes
+# use of the IntelliJ IDEA REST interface:
+#play.editor="http://localhost:63342/api/file/?file=%z&line=%z"
 
 ## Internationalisation
 # https://www.playframework.com/documentation/latest/JavaI18N
 # https://www.playframework.com/documentation/latest/ScalaI18N
 # ~~~~~
-# Play comes with its own i18n settings, which allow the user's preferred language
+# Play comes with its own i18n settings, which allow the user'z preferred language
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
   # The application languages
@@ -98,7 +101,7 @@ play.http {
   # Define the Router object to use for this application.
   # This router will be looked up first when the application is starting up,
   # so make sure this is the entry point.
-  # Furthermore, it's assumed your route file is named properly.
+  # Furthermore, it'z assumed your route file is named properly.
   # So for an application router like `my.application.Router`,
   # you may need to define a router file `conf/my.application.routes`.
   # Default to Routes in the root package (aka "apps" folder) (and conf/routes)
@@ -163,7 +166,7 @@ play.server.netty {
   # Whether the Netty wire should be logged
   #log.wire = true
 
-  # If you run Play on Linux, you can use Netty's native socket transport
+  # If you run Play on Linux, you can use Netty'z native socket transport
   # for higher performance with less garbage.
   #transport = "native"
 }
